SERVER-94379 Fix deadlock in BalancerStatsRegistry (#26814)

GitOrigin-RevId: 82ed546cfd108115fe2a60ab0e941c19cabb25bf